# life-assistant

./: .env  .gitignore  alembic.ini  pyproject.toml
deploy/: Dockerfile  main.tf  variables.tf
docs/: data.csv
migrations/: env.py
migrations/versions/: 2025_03_06_0947-704ceb51b4f3_initial_migration.py  2025_03_06_0953-9e423730035d_initial_migration.py  2025_03_07_1128-f47d980aea81_initial_migration.py
scripts/: pull-schema.py
src/: main.py
src/agents/: bills.py
src/application/reminders/: create.py  router.py  update.py
src/chatbot/: chatbot.py
src/constants/: env.py
src/database/: db.py  pgvector.py
src/domain/reminders/: types.py
src/infrastructure/database/reminders/: reminders-ds.py  reminders_ds.py
src/providers/constants/: env.py
src/providers/sqlalchemy/: engine.py
src/providers/sqlalchemy/models/: __init__.py  dataclasses.py  models.py
